--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "joi": "^17.6.0"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   }
 }
